--- a/shop.html
+++ b/shop.html
@@ -38,7 +38,12 @@
 			<div id="primary" class="content-area column full">
 				<main id="main" class="site-main" role="main">
 				<p class="woocommerce-result-count">
-					 Charts go 
+					 <img src="Images/output.png" alt = "Loan Approval Predication">
+					 <img src="Loan_Status.png" alt = "Loan_Status">
+					 <img src="Property_Area.png" alt = "Property Loan Approval">
+					 <img src="Married.png" alt = "Married Loan">
+					 <img src="Self_Employed.png" alt = "Self Employed Loan">
+					 <img src="LoanApproval.png" alt = "Loan Approval">
 				
 				</p>
 	
